fix: icon align when menu collapse

--- a/src/assets/style/common/resetElement.scss
+++ b/src/assets/style/common/resetElement.scss
@@ -473,7 +473,7 @@
   width: 0;
   overflow: hidden;
   visibility: hidden;
-  display: inline-block;
+  display: none;
 }
 
 .el-menu--collapse .el-submenu>.el-submenu__title .el-submenu__icon-arrow {
